--- a/radamsa/Dockerfile
+++ b/radamsa/Dockerfile
@@ -16,7 +16,9 @@ RUN sudo apt-get update -qq && sudo apt-get -y install \
     build-essential \
     cmake \
     git-core \
-    ffmpeg
+    ffmpeg \
+    curl \
+    wget
 
 # Copy startup script
 COPY ./screen.sh /root/screen.sh
